feat: add get menu
